--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -200,14 +200,27 @@
         }
     },
     "navigation": {
-        "header": "Управление данными игры",
+        "header": "Управление Игровыми Данными",
         "title": "Консоль DH",
         "segments": {
             "characters": "Персонажи",
             "missions": "Миссии",
             "inventory": "Инвентарь",
+            "scene": "Сцена",
             "account": "Аккаунт",
             "command": "Команда"
+        }
+    },
+    "scene": {
+        "sections": {
+            "propsNearMe": "Объекты Поблизости",
+            "recentChanges": "Недавние Изменения"
+        },
+        "messages": {
+            "saveSuccess": "Состояние объекта успешно сохранено",
+            "saveError": "Не удалось сохранить состояние объекта",
+            "undoSuccess": "Состояние объекта успешно восстановлено",
+            "undoError": "Не удалось восстановить состояние объекта"
         }
     },
     "welcome": {
