--- a/src/locales/zh_HK.json
+++ b/src/locales/zh_HK.json
@@ -200,14 +200,27 @@
         }
     },
     "navigation": {
-        "header": "遊戲數據管理",
+        "header": "管理遊戲數據",
         "title": "DH 控制台",
         "segments": {
             "characters": "角色",
             "missions": "任務",
             "inventory": "背包",
+            "scene": "場景",
             "account": "帳號",
             "command": "命令"
+        }
+    },
+    "scene": {
+        "sections": {
+            "propsNearMe": "道具（附近）",
+            "recentChanges": "狀態更改歷史"
+        },
+        "messages": {
+            "saveSuccess": "道具狀態保存成功",
+            "saveError": "保存道具狀態失敗",
+            "undoSuccess": "道具狀態恢復成功",
+            "undoError": "恢復道具狀態失敗"
         }
     },
     "welcome": {
