--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -248,7 +248,7 @@
             },
             "step1": {
                 "title": "步骤 1：启动所需程序",
-                "description": "运行 `DanhengServer.exe` 和 `Fiddler Classic`"
+                "description": "运行 `DanhengServer.exe` 和 `Fiddler Classic` (或 cultivation)"
             },
             "step2": {
                 "title": "步骤 2：创建账户",
