--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -211,6 +211,19 @@
             "command": "Commande"
         }
     },
+    "scene": {
+        "sections": {
+            "propsNearMe": "Objets à Proximité",
+            "recentChanges": "Changements Récents"
+        },
+        "messages": {
+            "saveSuccess": "État de l'objet enregistré avec succès",
+            "saveError": "Échec de l'enregistrement de l'état de l'objet",
+            "undoSuccess": "État de l'objet restauré avec succès",
+            "undoError": "Échec de la restauration de l'état de l'objet",
+            "noStateSelected": "Veuillez sélectionner un état à enregistrer"
+        }
+    },
     "welcome": {
         "title": "Bienvenue sur la Console DH!",
         "subtitle": "Votre outil puissant pour la gestion du serveur Danheng",
@@ -250,18 +263,6 @@
                 "title": "Étape 4 : Connecter DHConsole à DanhengServer",
                 "description": "Cliquez sur le bouton \"Connecter\" dans le coin supérieur droit de DHConsole"
             }
-        }
-    },
-    "scene": {
-        "sections": {
-            "propsNearMe": "Objets à Proximité",
-            "recentChanges": "Changements Récents"
-        },
-        "messages": {
-            "saveSuccess": "État de l'objet enregistré avec succès",
-            "saveError": "Échec de l'enregistrement de l'état de l'objet",
-            "undoSuccess": "État de l'objet restauré avec succès",
-            "undoError": "Échec de la restauration de l'état de l'objet"
         }
     }
 }
