--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -220,7 +220,8 @@
             "saveSuccess": "オブジェクトの状態を保存しました",
             "saveError": "オブジェクトの状態の保存に失敗しました",
             "undoSuccess": "オブジェクトの状態を元に戻しました",
-            "undoError": "オブジェクトの状態の復元に失敗しました"
+            "undoError": "オブジェクトの状態の復元に失敗しました",
+            "noStateSelected": "保存する状態を選択してください"
         }
     },
     "welcome": {
