--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -220,7 +220,8 @@
             "saveSuccess": "Estado do objeto salvo com sucesso",
             "saveError": "Falha ao salvar estado do objeto",
             "undoSuccess": "Estado do objeto restaurado com sucesso",
-            "undoError": "Falha ao restaurar estado do objeto"
+            "undoError": "Falha ao restaurar estado do objeto",
+            "noStateSelected": "Selecione um estado para salvar"
         }
     },
     "welcome": {
