--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -220,7 +220,8 @@
             "saveSuccess": "Состояние объекта успешно сохранено",
             "saveError": "Не удалось сохранить состояние объекта",
             "undoSuccess": "Состояние объекта успешно восстановлено",
-            "undoError": "Не удалось восстановить состояние объекта"
+            "undoError": "Не удалось восстановить состояние объекта",
+            "noStateSelected": "Пожалуйста, выберите состояние для сохранения"
         }
     },
     "welcome": {
