--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -211,6 +211,19 @@
             "command": "คำสั่ง"
         }
     },
+    "scene": {
+        "sections": {
+            "propsNearMe": "วัตถุใกล้เคียง",
+            "recentChanges": "การเปลี่ยนแปลงล่าสุด"
+        },
+        "messages": {
+            "saveSuccess": "บันทึกสถานะวัตถุสำเร็จ",
+            "saveError": "ไม่สามารถบันทึกสถานะวัตถุ",
+            "undoSuccess": "คืนค่าสถานะวัตถุสำเร็จ",
+            "undoError": "ไม่สามารถคืนค่าสถานะวัตถุ",
+            "noStateSelected": "กรุณาเลือกสถานะที่จะบันทึก"
+        }
+    },
     "welcome": {
         "title": "ยินดีต้อนรับสู่ DH คอนโซล!",
         "subtitle": "เครื่องมือที่ทรงพลังสำหรับการจัดการเซิร์ฟเวอร์ Danheng ของคุณ",
@@ -250,18 +263,6 @@
                 "title": "ขั้นตอนที่ 4: เชื่อมต่อ DHConsole กับ DanhengServer",
                 "description": "คลิกปุ่ม \"เชื่อมต่อ\" ที่มุมขวาบนของ DHConsole"
             }
-        }
-    },
-    "scene": {
-        "sections": {
-            "propsNearMe": "วัตถุใกล้เคียง",
-            "recentChanges": "การเปลี่ยนแปลงล่าสุด"
-        },
-        "messages": {
-            "saveSuccess": "บันทึกสถานะวัตถุสำเร็จ",
-            "saveError": "ไม่สามารถบันทึกสถานะวัตถุ",
-            "undoSuccess": "คืนค่าสถานะวัตถุสำเร็จ",
-            "undoError": "ไม่สามารถคืนค่าสถานะวัตถุ"
         }
     }
 }
