--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -220,7 +220,8 @@
             "saveSuccess": "道具状态保存成功",
             "saveError": "保存道具状态失败",
             "undoSuccess": "道具状态恢复成功",
-            "undoError": "恢复道具状态失败"
+            "undoError": "恢复道具状态失败",
+            "noStateSelected": "请选择一个状态来保存"
         }
     },
     "welcome": {
