--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -216,6 +216,9 @@
             "propsNearMe": "Объекты Поблизости",
             "recentChanges": "Недавние Изменения"
         },
+        "labels": {
+            "showDistantProps": "Показать объекты > 100м"
+        },
         "messages": {
             "saveSuccess": "Состояние объекта успешно сохранено",
             "saveError": "Не удалось сохранить состояние объекта",
