improve i18n on scene

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -218,6 +218,7 @@
             "recentChanges": "Recent Changes"
         },
         "labels": {
+            "state": "State",
             "showDistantProps": "Show props > 100m"
         },
         "messages": {
