--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -217,6 +217,7 @@
             "recentChanges": "Cambios Recientes"
         },
         "labels": {
+            "state": "Estado",
             "showDistantProps": "Mostrar objetos > 100m"
         },
         "messages": {
