--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -217,6 +217,7 @@
             "recentChanges": "Changements Récents"
         },
         "labels": {
+            "state": "État",
             "showDistantProps": "Afficher les objets > 100m"
         },
         "messages": {
