--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -217,6 +217,7 @@
             "recentChanges": "最近の変更"
         },
         "labels": {
+            "state": "状態",
             "showDistantProps": "100m 以上のオブジェクトを表示"
         },
         "messages": {
